--- a/templates/user.html
+++ b/templates/user.html
@@ -167,7 +167,7 @@
                     </tr>
                     <tr>
                         <td>Url to GitHub: </td>
-                        <td><a href="{{ github_data.url }}">{{ github_data.url }}</a></td>
+                        <td><a href="https://github.com/{{ user.github }}">{{ user.github }}</a></td>
                     </tr>
                     <tr>
                         <td>Last repo update: </td>
