Added different nav bar color for applicant, fixed bug in interview page

--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,7 @@
 <div class="container">
     <ul id="flash">
     {% for message in get_flashed_messages() %}
-      <li>{{ message }}</li>
+      <li style="display:inline-block; ">{{ message }}</li>
     {% endfor %}
     </ul>
 
