--- a/templates/interviews.html
+++ b/templates/interviews.html
@@ -4,7 +4,7 @@
 <div class='container'>
 <h3>Your interviews</h3>
 {% for interview in interviews %}
-With <a href="/users/{{ interview.user_id }}">{{ interview.user.first_name }} {{ interview.user.last_name }}</a> on {{ interview.interview_date }}
+With <a href="/users/{{ interview.user_id }}">{{ interview.user.first_name }} {{ interview.user.last_name }}</a> on {{ interview.interview_date }} <br>
 {% endfor %}
 </div>
 {% endblock %}
