--- a/templates/status.html
+++ b/templates/status.html
@@ -1,4 +1,13 @@
-{% extends 'base.html' %} {% block title %} Application status {% endblock %} {% block content %}
+{% extends 'base.html' %} {% block title %} Application status {% endblock %} 
+
+{% block morehead %}
+<style> nav.navbar.navbar-inverse{
+    background-color: lightgrey;
+} 
+
+</style>
+{% endblock %}
+{% block content %}
 <h2>Your application</h2> {% if user %}
 <div class='container'>
     <div class="row">
