--- a/templates/test-tool.html
+++ b/templates/test-tool.html
@@ -1,12 +1,10 @@
-<!doctype html>
-<html>
-<head>
+{% extends 'base.html' %}
+{% block title %}Pair programming tool
+{% endblock %}
+  {% block morehead %}
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
     <link href="/styles.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>HireBright -  Pair programming tool </title>
-  
-    <link href="/style.css" rel="stylesheet">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/styles/default.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.6.1.min.js">
@@ -88,37 +86,10 @@ $(function () {
 
 
   <script src="https://code.jquery.com/jquery-2.1.1.js"></script>
+{% endblock %}
 </head>
 
-<body>
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar">Login</span>
-        <span class="icon-bar">Signup</span>
-        <span class="icon-bar">Logout</span>                        
-      </button>
-
-      <div class="navbar-header">
-        <a class="navbar-brand" href="/">HireBright</a>
-      </div>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      
-      
-          
-      
-      <ul class="nav navbar-nav navbar-right">
-        
-        
-        <li><a href="/logout">Logout</a></li>
-
-        
-      </ul>
-    </div>
-  </div>
-</nav>
+{% block content %}
 
 
 <div class="container">
@@ -180,8 +151,4 @@ $(function () {
 });
 
 </script>
-<script type="text/javascript">
-  setTimeout(function(){$('#flash').text('')}, 2000)
-</script>
-</body>
-</html>
+{% endblock %}
