--- a/static/styles.css
+++ b/static/styles.css
@@ -13,14 +13,14 @@ html {
 }
 
 .status-1 {
-    background-color: #B6FFCA;
+    background-color: #F8F8F8;
 }
 .status-3 {
-    background-color: #CAE8A2;
+    background-color: #E8E8E8;
 }
 .status-6 {
-    background-color: #E8AA4F;
+    background-color: #D8D8D8;
 }
 .status-7 {
-    background-color: #FF7B56;
+    background-color: #C8C8C8;
 }
