Green styling, gif for tool

--- a/static/styles.css
+++ b/static/styles.css
@@ -13,14 +13,14 @@ html {
 }
 
 .status-1 {
-    background-color: #F8F8F8;
+    background-color: #e6ffe6;
 }
 .status-3 {
-    background-color: #E8E8E8;
+    background-color: #ccffcc;
 }
 .status-6 {
-    background-color: #D8D8D8;
+    background-color: #b3ffb3;
 }
 .status-7 {
-    background-color: #C8C8C8;
+    background-color: #99ff99;
 }
