--- a/static/styles.css
+++ b/static/styles.css
@@ -13,14 +13,14 @@ html {
 }
 
 .status-1 {
-    background-color: #e6ffe6;
+    background-color: #99ffe6;
 }
 .status-3 {
-    background-color: #ccffcc;
+    background-color: #ccff99;
 }
 .status-6 {
-    background-color: #b3ffb3;
+    background-color: #ffff99;
 }
 .status-7 {
-    background-color: #99ff99;
+    background-color: #ffcc99;
 }
